# mpk3-settings

./: .gitignore  AUTHORS  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  mpk3-settings.spec.in
.copr/: Makefile
pkg/: com.github.tsmetana.mpk3-settings.desktop  com.github.tsmetana.mpk3-settings.metainfo.xml  io.github.tsmetana.mpk3-settings.desktop  io.github.tsmetana.mpk3-settings.metainfo.xml
src/: Makefile.am  app_win.c  app_win.h  device.c  device.h  file.c  file.h  main.c  message.h  presets.c  presets.h
